--- a/index.html
+++ b/index.html
@@ -2,5 +2,5 @@
 <head>My Github Page (IN PROGRESS!)</head>
 <body>
     <h1>✨Furry✨</h1>
-    <h4>Last.fm profile: <a>https://www.last.fm/user/saekoboyy</a></h4>
+    <h4><a>href="https://www.last.fm/user/saekoboyy">Last.fm profile</a></h4>
 </body>
