Make link clickable take 5

--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
-<head>My Github Page (IN PROGRESS!)</head>
+<html>
+<head>
+    <title>My Github Page (IN PROGRESS!)</title>
+</head>
 <body>
     <h1>✨Furry✨</h1>
     <h4><a href="https://www.last.fm/user/saekoboyy">Last.fm profile</a></h4>
 </body>
+</html>
