updated head now that it's set properly

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>My Github Page (IN PROGRESS!)</title>
+    <title>Saekoboyy's Profile :3</title>
 </head>
 <body>
     <h1>✨Furry✨</h1>
