Fixin stuff 	modified:   Zed.html 	modified:   index.html

--- a/Zed.html
+++ b/Zed.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	Zed :3
+  <title>Zed :3</title>
 </head>
 <body>
-	<h2>Zed ily <3</h2>
+  <h2>Zed ily <3</h2>
 </body>
 </html>
