More acurate now 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>Saekoboyy's Profile :3</title>
 </head>
 <body>
-  <h1>✨Furry✨</h1>
+  <h2>✨ Maws ✨</h2>
   <h4><a href="https://www.last.fm/user/saekoboyy">Last.fm profile</a></h4>
 </body>
 </html>
